--- a/client/stylesheets/partials/_helpers.scss
+++ b/client/stylesheets/partials/_helpers.scss
@@ -1,16 +1,11 @@
-//HELPERS
-// _______________
+// /*  LAYOUT
+// ____________________ */
 
 .centered {
   text-align:center;
   display: inline-block;
   width: 50px;
 }
-
-.editable {
-  cursor: pointer;
-}
-
 .hidden {
   display: none;
 }
@@ -21,15 +16,30 @@
   width: 100%;
 }
 
+
+
+// /*  FORMS
+// ____________________ */
+
+.editable {
+  cursor: pointer;
+}
+
+
+// /*  CSS TABLES
+// ____________________ */
 .display-table {
   display: table;
-  // width: 100%;
+  width: 100%;
+  height: 100%;
  
-  .row {
+  .table-row {
     display: table-row;
+    height: 100%;
 
-    .cell {
+    .table-cell {
       display: table-cell;
+      height: 100%;
 
       &.centered > div {
         margin-left: auto;
@@ -41,10 +51,3 @@
     }
   }
 }
-
-// .table-vertical-middle {
-//   vertical-align: middle;
-// }
-// .height-10 {
-//   height: 10px;
-// }
