--- a/client/stylesheets/partials/_variables.scss
+++ b/client/stylesheets/partials/_variables.scss
@@ -1,6 +1,7 @@
 // LAYOUT
 // ________________________________________
-$app-padding:                         1em;
+$app-padding:                          1em;
+$app-header-height:                    3.5em;
 $container-margin:                     1em;
 
 // TYPOGRAPHY
